# docs/swagger.json
@@ -5,14 +5,19 @@
         "title": "Dankey API",
         "contact": {},
         "license": {
-            "name": "MIT",
-            "url": "http://opensource.org/licenses/MIT"
+            "name": "MPL",
+            "url": "https://www.mozilla.org/en-US/MPL/2.0/"
         },
         "version": "1.0"
     },
     "paths": {
         "/decrement": {
             "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Decrement the value of a key by 1. If they value is not an integer, an error will be returned.",
                 "consumes": [
                     "application/json"
@@ -45,6 +50,11 @@
         },
         "/delete": {
             "delete": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Delete a key-value pair",
                 "consumes": [
                     "application/json"
@@ -77,6 +87,11 @@
         },
         "/get": {
             "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Retrieve the JSON Object stored under a key",
                 "consumes": [
                     "application/json"
@@ -109,6 +124,11 @@
         },
         "/increment": {
             "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Increment the value of a key by 1. If they value is not an integer, an error will be returned.",
                 "consumes": [
                     "application/json"
@@ -141,6 +161,11 @@
         },
         "/put": {
             "put": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Put any JSON-serializable data under a key",
                 "consumes": [
                     "application/json"
@@ -179,6 +204,11 @@
         },
         "/retrieveFromFile": {
             "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Retrieve the state of the database from a file",
                 "consumes": [
                     "application/json"
@@ -211,6 +241,11 @@
         },
         "/saveToFile": {
             "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Save the current state of the database to a file",
                 "consumes": [
                     "application/json"
